@@ -89,6 +89,7 @@ ConstantDensityPropagator.SpeedLimitReached2   =% normal!
 ReadoutGraphic.Ohms   =Ohms
 ReadoutGraphic.Amps   =Amps
 ReadoutGraphic.Volts  =Volts
+ReadoutGraphic.Farads  =Farads
 
 # BranchSource
 BranchSource.Wire            =Wire
