@@ -86,6 +86,7 @@ ConstantDensityPropagator.SpeedLimitReached2   =% normal!
 ReadoutGraphic.Ohms   =Ohmios
 ReadoutGraphic.Amps   =Amperios
 ReadoutGraphic.Volts  =Voltios
+ReadoutGraphic.Farads=Faradios
 
 # BranchSource
 BranchSource.Wire            =Alambre
