@@ -20,7 +20,9 @@ Renamed "Edit Capacitance" to "Change Capacitance" in capacitor menu.
 Renamed "Edit Inductance" to "Change Inductance" in inductor menu.
 Removed Zoom handler.
 Voltage Strip chart probes now work correctly at different zoom levels.
-Bugs fixed in 3.04.09 bug report [1-12, 14-15, 18,21,22,23,24]
+Fixed: Capacitor reads ohms instead of Farads.
+Fixed: Battery voltage editor has incorrect behavior when switching to larger range & back.
+Bugs fixed in 3.04.09 bug report [1-12, 14-15, 18,21,22,23,24,27]
 Bugs recommended but skipped[16,  
 
 3.04.10 (12-12-2006)
